[package]
name = "rehost"
version = "0.1.0"
authors = ["EthanYidong <ethanyidong@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
hyper = "0.13"
reqwest = "0.10"
tokio = { version = "0.2", features = ["full"] }

toml = "0.5"
serde = { version = "1.0", features = ["derive"] }